# envguard

./: .gitignore  README.md  pyproject.toml
envguard/: __init__.py
src/: guard.py
tests/: test_guard.py
